--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,8 +3,12 @@ name = "magical-search"
 version = "0.1.0"
 edition = "2021"
 
-[build]
-rustc = "build.rs"
+[package.metadata.update-database]
+path = "src/update-database/main.rs" 
+
+[[bin]]
+name = "update-database"
+path = "src/update_database/main.rs"
 
 [dependencies]
 anyhow = "1.0.79"
@@ -13,13 +17,7 @@ gdk-pixbuf = "0.18.1"
 thiserror = "1.0.57"
 rusqlite = "0.31.0"
 reqwest = { version = "0.11.24", features = ["blocking"] }
-
-[build-dependencies]
 tokio = {version = "1.36.0", features = ["full"]}
-reqwest = { version = "0.11.24", features = ["blocking"] }
-anyhow = "1.0.79"
-thiserror = "1.0.57"
-rusqlite = "0.31.0"
 serde = {version = "1.0.196", features = ["derive"]}
 serde_json = "1.0.113"
 itertools = "0.12.1"
