--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,10 +15,17 @@ anyhow = "1.0.79"
 gtk = "0.18.1"
 gdk-pixbuf = "0.18.1"
 thiserror = "1.0.57"
-rusqlite = "0.31.0"
 reqwest = { version = "0.11.24", features = ["blocking"] }
 tokio = {version = "1.36.0", features = ["full"]}
 serde = {version = "1.0.196", features = ["derive"]}
 serde_json = "1.0.113"
 itertools = "0.12.1"
 bytes = "1.5.0"
+iced = {version = "0.12.0", features = ["image", "debug", "tokio"]}
+once_cell = "1.19.0"
+async-std = "1.12.0"
+tracing-subscriber = "0.3.18"
+directories-next = "2.0.0"
+uuid = { version = "1.0", features = ["v4", "fast-rng", "serde"] }
+tokio-rusqlite = "0.5.0"
+rusqlite = "0.30.0"
