--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,7 +20,7 @@ serde = {version = "1.0.196", features = ["derive"]}
 serde_json = "1.0.113"
 itertools = "0.12.1"
 bytes = "1.5.0"
-iced = {version = "0.12.1", features = ["image", "debug", "tokio"]}
+iced = {version = "0.12.1", features = ["image", "debug", "tokio", "lazy"]}
 once_cell = "1.19.0"
 async-std = "1.12.0"
 tracing-subscriber = "0.3.18"
