--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,6 +27,6 @@ tracing-subscriber = "0.3.18"
 directories-next = "2.0.0"
 uuid = { version = "1.0", features = ["v4", "fast-rng", "serde"] }
 tokio-rusqlite = "0.5.0"
-rusqlite = "0.30.0"
+rusqlite = { version = "0.30.0", features = ["blob"]}
 nom = "7.1.3"
 nom-supreme = "0.8.0"
