--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,3 +30,4 @@ tokio-rusqlite = "0.5.0"
 rusqlite = { version = "0.30.0", features = ["blob"]}
 nom = "7.1.3"
 nom-supreme = "0.8.0"
+lazy_static = "1.4.0"
